--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@
     <form method="post">
         <input type="text" name="login">
         <input type="password" name='password'>
-        <input type="submit" value='Вход'>
+        <input type="submit" value='SignIn'>
     </form>
 
 </body>
